                         - Show hidden SSIDs as <HIDDEN> in wifi scan
                         - Add logging, with reason, for some wifi events
                         - WIFI refactor; use pcp to power on/off wifi driver, and then normal
                           wifi state to control driver mode changes. Improvements to wifi
                           stability and compatibility.

2018-03-21 MWJ  3.1.000  OTA release
                         - Tesla Model S basic vehicle support
                         - Provide an option for aggressive allocation of SPI RAM (OVMS HW 3.1)
                         - Low-level boot framework for storing data across CPU resets/sleeps
                         - Webserver: support add to home screen / web-app mode
                         - Boot/Autostart: crash detection & counting, temporary autostart inhibit
                         - Webserver: show boot status, shell command output streaming & history
                         - Network: New 'network status' command to show IP networking status
                         - Simcom: Check MUX status in NetWait state
                         - Simcom: Add a MuxStart sanity check timeout (120 seconds)
                         - Simcom: Check MUX status in NetMode state
                         - Simcom: Refactor state timeouts for greater reliability
                         - Simcom: Make 'simcom status' the default simcom command
                         - Network: Support 'config network dns' space-separated list of DNS servers
                         - Wifi: Support APCLIENT mode (for Access-Point + Client)
                         - Webserver: command streaming, auto reload, shell pageup/down
                         - Ota: If wifi network is available, try to determine available firmware version on server
                         - Webserver: added DNS config, replaced modem with network status